# deep_learning

exercise1_material/src_to_implement/: NeuralNetwork.py  main.py  pyproject.toml
exercise1_material/src_to_implement/Layers/: Base.py  FullyConnected.py  ReLU.py  SoftMax.py
exercise1_material/src_to_implement/Optimization/: Loss.py  Optimizers.py
