[tool.poetry]
name = "deep-learning"
version = "0.1.0"
description = ""
authors = ["aicha"]
readme = "README.md"
packages = [{include = "deep_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
tabulate = "^0.9.0"
scikit-learn = "^1.1.3"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
